# rate-limited-fastapi

./: .env.example  .gitignore  .init_push.sh  .pre-commit-config.yaml  README.md  hammer.sh  pyproject.toml  rate_limiter.lua  requirements.txt
app/: __init__.py  config.py  main.py  token_bucket.py
dashboard/: __init__.py  app.py
load/: locustfile.py
scripts/: loadenv.sh  run_redis.sh  setup_redis.py
tests/: conftest.py  test_retry_after.py  test_token_bucket.py
