
[project]
name = "rate-limited-fastapi"
version = "0.1.0"
description = "FastAPI app with Redis-backed token bucket, Streamlit dashboard, and Locust load test"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [{name = "Sid Anand", email = "sanand@apache.org"}]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "redis>=5.0.7",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "flake8>=7.0.0",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.7.0",
]
load = ["locust>=2.29.0"]
dash = ["streamlit>=1.37.0", "plotly>=5.22.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "build", "dist", "node_modules"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
