[project]
name = "rate-limited-fastapi"
version = "0.1.0"
description = "FastAPI app with Redis-backed token bucket, Streamlit dashboard, and Locust load test"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sid Anand", email = "sanand@apache.org" }]

# Runtime (production) dependencies ONLY
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.3",
  "redis>=5.0.7",
  "pydantic==2.11.5",
  "python-dotenv==1.1.0",
  "orjson>=3.10.0",
  "httpx==0.28.1",
  "typing-extensions==4.14.0",
]

[project.optional-dependencies]
# Streamlit dashboard
dash = [
  "streamlit>=1.37.0",
  "plotly>=5.22.0",
  "pandas>=2.2.0",
]

# Load testing
load = [
  "locust>=2.29.0",
]

# Testing & coverage
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "fakeredis>=2.31.0",        # optional: in‑memory Redis for tests
]

# Linting / formatting / static analysis
lint = [
  "black>=24.4.0",
  "isort>=5.13.2",
  "ruff>=0.6.9",
  "pre-commit>=3.7.0",
]

# Static typing (kept separate so production image can skip them)
typing = [
  "mypy>=1.10.0",
  "types-requests",
  "types-redis",
]

# Aggregate developer convenience group (install everything)
dev = [
  "rate-limited-fastapi[dash,load,test,lint,typing]",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","B","UP"]
ignore = ["E203"]  # removed W503; Ruff complained

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

# uv dependency groups (alternative way if you prefer `uv sync --group`):
[dependency-groups]
dev = [
  "streamlit>=1.37.0",
  "plotly>=5.22.0",
  "pandas>=2.2.0",
  "locust>=2.29.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "fakeredis>=2.31.0",
  "black>=24.4.0",
  "isort>=5.13.2",
  "ruff>=0.6.9",
  "pre-commit>=3.7.0",
  "mypy>=1.10.0",
  "types-requests",
  "types-redis",
]
